alignment issue debug

--- a/css/works-template.css
+++ b/css/works-template.css
@@ -3,13 +3,6 @@
     list-style:none;
 }
 
-/*.page-wrapper {
-    height: 84vh;
-    width: auto;
-    display: table-cell;
-    vertical-align: middle;
-}*/
-
 
 /*img hover shadow*/
 .img-box:hover,
